# technical-tests

./: Extraction Acronymes.ipynb  extract-r2i.ipynb  pyproject.toml
docs/: doc2.txt  doc3.txt  doc4.txt  doc5.txt
r2i-extraction/docs/: doc1.txt
