[project]
name = "technical-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "s3fs>=2024.6.1",
    "langchain>=0.2.15",
    "langchain-openai>=0.1.23",
    "langchain-community>=0.2.15",
    "python-dotenv>=1.0.1",
]
